# libgs

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  libgs.h
cmake/: 3rd_party.cmake  utility.cmake
examples/: CMakeLists.txt  algorithm.cpp  app_utls.cpp  argv_parse.cpp  coroutine.cpp  log.cpp  tcp_server.cpp  tcp_socket.cpp  timer.cpp  value.cpp
examples/core/: algorithm.cpp  app_utls.cpp  argv_parse.cpp  co_mutex.cpp  co_semaphore.cpp  coroutine.cpp  ini.cpp  library.cpp  lock_free_queue.cpp  log.cpp  value.cpp
examples/core/modules/: CMakeLists.txt  hello_world.cpp  hello_world_await_0.cpp  hello_world_future_0.cpp  main.cpp  module_0.cpp  module_0_future_0.cpp  module_0_future_1.cpp  module_1.cpp  module_1_future_0.cpp
examples/dbi/: cell.cpp
examples/http/: http_server.cpp  http_server_aop.cpp  http_server_parser.cpp  http_session.cpp  https_server.cpp  server.cpp  server_parser.cpp
examples/http_client/: session_pool.cpp
examples/http_server/: http_server.cpp  http_server_aop.cpp  http_server_parser.cpp  http_session.cpp  https_server.cpp
examples/io/: ssl_stream.cpp  ssl_tcp_server.cpp  ssl_tcp_socket.cpp  tcp_server.cpp  tcp_socket.cpp  timer.cpp  udp_server.cpp  udp_socket.cpp
libgs/: CMakeLists.txt  core.h  dbi.h  http.h  http.hpp  io.h  libgs.hpp
libgs/core/: CMakeLists.txt  algorithm.h  app_utls.cpp  app_utls.h  args_parser.cpp  args_parser.h  coro.h  coroutine.h  execution.cpp  execution.h  flags.h  global.cpp  global.h  ini.cpp  ini.h  library.cpp  library.h  lock_free_queue.h  log.h  modules.cpp  modules.h  shared_mutex.h  spin_mutex.h  string_list.cpp  string_list.h  value.h
libgs/core/algorithm/: base.cpp  base.h  byte_order.cpp  byte_order.h  math.h  mime_type.cpp  mime_type.h  misc.cpp  misc.h  sha1.cpp  sha1.h  uuid.h
libgs/core/algorithm/detail/: base.h  basic_base.h  byte_order.h  math.h  mime_type.h  uuid.h
libgs/core/coro/: condition_variable.h  mutex.h  semaphore.h  shared_mutex.h  utilities.h
libgs/core/coro/detail/: condition_variable.h  mutex.h  semaphore.h  shared_mutex.h  utilities.h  wake_up.h
libgs/core/cxx/: asio_concept.h  asio_concept.hpp  asio_concepts.h  attributes.h  attributes.hpp  concept.h  concept.hpp  concepts.h  coro_concepts.h  cplusplus.h  cplusplus.hpp  exception.h  flags.h  formatter.h  function_traits.h  initialize.h  operators.h  opt_token.h  remove_repeat.h  remove_repeat.hpp  return_tools.h  string_tools.h  token_concepts.h  tools.h  type_traits.h  type_traits.hpp  utilities.h
libgs/core/cxx/detail/: exception.h  flags.h  operators.h  opt_token.h  return_tools.h  string_tools.h  token_concepts.h  tools.h  type_traits.h  utilities.h
libgs/core/detail/: app_utls.h  app_utls_unix.cpp  app_utls_win.cpp  coroutine.h  execution.h  flags.h  global.h  ini.cpp  ini.h  library.h  library_impl.hii  library_unix.cpp  library_win.cpp  lock_free_queue.h  modules.h  shared_mutex.h  spin_mutex.h  string_list.h  value.h
libgs/core/log/: buffer.h  context.h  logger.h  mq.h  scheduler.cpp  scheduler.h  types.h  writer.cpp  writer.h
libgs/core/log/detail/: buffer.h  context.h  logger.h  mq.h  scheduler.h  types.h
libgs/dbi/: CMakeLists.txt  cell.h  connection.h  global.h  management.cpp  management.h  result_iterator.h  types.h
libgs/dbi/detail/: cell.h  connection.h  management.h  result_iterator.h
libgs/http/: CMakeLists.txt  client.h  container.h  cookie.h  global.cpp  global.h  header.h  helper_base.h  opt_token.h  parser.cpp  parser.h  parser_base.h  request.h  response.h  server.h  session.h  ssl_server.h  types.cpp  types.h  version.h
libgs/http/basic/: concepts.h  container.h  cookie.h  header.h  opt_token.h  parser.h  socket_operation_helper.h  types.h
libgs/http/basic/detail/: container.h  cookie.h  opt_token.h  parser.h  socket_operation_helper.h  types.h
libgs/http/client/: client.h  context.h  datagram.h  parser.h  reply.h  reply_context.h  reply_parser.h  request.h  request_arg.h  request_context.h  request_helper.h  request_url.h  response.h  response_datagram.h  response_parser.h  session_pool.h  url.h
libgs/http/client/detail/: client.h  context.h  reply.h  reply_context.h  reply_parser.h  request.h  request_arg.h  request_context.h  request_helper.h  request_url.h  response.h  response_parser.h  session_pool.h  url.h
libgs/http/context/: datagram.h  request.h  response.h
libgs/http/context/detail/: datagram.h  session.h
libgs/http/cxx/: attributes.h  concepts.h  container.h  file_opt_token.h  opt_token.h  path_opt_token.h  socket_operation_helper.h  socket_session.h
libgs/http/cxx/detail/: container.h  file_opt_token.h  opt_token.h  socket_operation_helper.h  socket_session.h
libgs/http/detail/: container.h  cookie.h  helper_base.h  opt_token.h  parser_base.h  session.h  types.h  version.h
libgs/http/server/: acceptor_wrap.h  aop.h  context.h  datagram.h  parser.h  request.h  request_datagram.h  request_parser.h  response.h  response_helper.h  server.h  session.h  session_set.h  ssl_server.h
libgs/http/server/detail/: acceptor_wrap.h  aop.h  context.h  parser.h  request.h  request_parser.h  response.h  response_helper.h  server.h  session.h  session_base.cpp  session_base.h  session_set.h
libgs/io/: CMakeLists.txt  device.cpp  device.h  device_base.h  global.cpp  global.h  ip_types.h  socket.cpp  socket.h  ssl_stream.h  ssl_tcp_server.h  ssl_tcp_socket.h  stream.h  stream_buffer.h  tcp_server.h  tcp_socket.cpp  tcp_socket.h  tcp_ssl_socket.cpp  tcp_ssl_socket.h  timer.h  udp_socket.h
libgs/io/cxx/: concept.h  concept.hpp  disable_ssl  enable_ssl  option_ssl
libgs/io/detail/: device.h  device_base.h  socket.h  ssl_stream.h  ssl_tcp_server.h  ssl_tcp_socket.h  stream.h  stream_buffer.h  tcp_server.h  tcp_server_base.h  tcp_socket.h  timer.h  udp_socket.h  waitable.h  waitable_posix.cpp  waitable_winnt.cpp
libgs/io/types/: ip_types.h  opt_condition.h  opt_token.cpp  opt_token.h  stream_buffer.cpp  stream_buffer.h
libgs/io/types/detail/: ip_types.h  opt_condition.h  opt_token.h  stream_buffer.h
test/: CMakeLists.txt  main.cpp
