if (WIN32)
	set(OS_CPP win)
	set(IS_CPP winnt)
elseif (UNIX)
	if (APPLE)
		set(OS_CPP apple)
	else ()
		set(OS_CPP unix)
	endif ()
	set(IS_CPP posix)
endif()

option(ENABLE_SSL "-- libgs: enable link libssl" OFF)
if (ENABLE_SSL)
	message(STATUS "libgs: enable open ssl. (the version must be greater than or equal to 1.0.2)")
	add_definitions(-D__ENABLE_SSL__)
	if (OpenSSL_DIR)
		message(STATUS "libgs: manually specify the path of openssl: ${OpenSSL_DIR}")
		include_directories(${OpenSSL_DIR}/include)
		link_directories(${OpenSSL_DIR}/lib)
	else()
		find_package(OpenSSL REQUIRED)
	endif()
endif()

add_subdirectory(core)
add_subdirectory(io)
add_subdirectory(http)
add_subdirectory(web)
add_subdirectory(dbi)
add_subdirectory(utils)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES
	core.h  io.h  http.h
)